--- a/pages/goods_detail/goods_detail.wxml
+++ b/pages/goods_detail/goods_detail.wxml
@@ -12,7 +12,10 @@
             <view class='new_select-goods-price'>￥{{price}}/{{goods.unit}}</view>
           </view>
           <view class='select-goods-spec'>
-            <view class='select-goods-stock'>库存{{stock}}{{goods.unit}}</view>
+            <view class='select-goods-stock' style="display:flex;align-items: center;">
+              <image style="width:60rpx;height:30rpx;margin-right:10rpx;" src="../../images/kecun.png" wx:if="{{save == 1}}"></image>
+              库存{{stock}}{{goods.unit}}
+            </view>
             <view class='select-goods-sells'>销量213片</view>
           </view>
         </view>
@@ -22,7 +25,7 @@
           <view class='spec_title'>选择规格</view>
           <view class='spec_content_all'>
             <view class='spec_content' wx:for="{{goods.goods_standard}}">
-              <view class="spec_content_text {{item.id==id? 'on' : ''}}" bindtap="labelItemTap" data-current="{{item.id}}" data-price="{{item.price}}" data-stock="{{item.stock}}" data-images="{{item.images}}" data-value="{{item.name}}">
+              <view class="spec_content_text {{item.id==id? 'on' : ''}}" bindtap="labelItemTap" data-current="{{item.id}}" data-price="{{item.price}}" data-stock="{{item.stock}}" data-images="{{item.images}}" data-value="{{item.name}}" data-save="{{item.save}}">
                 {{item.name}}
               </view>
             </view>
@@ -71,11 +74,11 @@
   <view class='goods_cont'>
     <!-- <text class='texts'>可存</text> -->
     <view class='good_name'>
-        <image class="image_bq" src="../../images/kecun.png" wx:if="{{kc == 1}}"></image>
-        <image class="image_bq" src="../../images/hot.png" wx:if="{{hot == 1}}"></image>
-        <image class="image_bq" src="../../images/chuxiao.png" wx:if="{{cx == 1}}"></image>
-        <image class="image_bq" src="../../images/qingchang.png" wx:if="{{qc == 1}}"></image>
-        <text class="texts" wx:for="{{goods.goods_sign}}" wx:key="{{index}}">{{item.text}}</text>{{goods.goods_name}}
+        <image class="image_bq" src="http://ptcb077mt.bkt.clouddn.com/kecun.png" wx:if="{{kc == 1}}"></image>
+        <image class="image_bq" src="http://ptcb077mt.bkt.clouddn.com/hot.png" wx:if="{{hot == 1}}"></image>
+        <image class="image_bq" src="http://ptcb077mt.bkt.clouddn.com/chuxiao.png" wx:if="{{cx == 1}}"></image>
+        <image class="image_bq" src="http://ptcb077mt.bkt.clouddn.com/qingchang.png" wx:if="{{qc == 1}}"></image>
+        <view class="texts" wx:for="{{goods.goods_sign}}" wx:key="{{index}}">{{item.text}}</view>{{goods.goods_name}}
     </view>
     <view class='selling-point'>{{goods.goods_selling}}</view>
     <view class='price_cont'>
@@ -180,7 +183,7 @@
     <view class='ico_view'>
       <view class='service' bindtap="go_index">
         <button class="line"></button>
-        <image src='../../images/index.png' class='footbar_ico'></image>
+        <image src='http://ptcb077mt.bkt.clouddn.com/index.png' class='footbar_ico'></image>
         <view class='footbar_text'>首页</view>
       </view>
       <view class='service'>
