--- a/custom-tab-bar/index.wxml
+++ b/custom-tab-bar/index.wxml
@@ -2,8 +2,8 @@
 <cover-view class="tab-bar">
   <cover-view class="tab-bar-border"></cover-view>
   <cover-view wx:for="{{list.data}}" wx:key="index" class="tab-bar-item" data-path="{{item.linkurl}}" data-index="{{index}}" bindtap="switchTab">
-    <!-- <cover-image src="{{selected === index ? item.imgurl : item.imgurl}}"></cover-image> -->
-    <cover-view class="iconfont {{item.iconclass}}" style="color:{{item.change? list.style.iconcoloron : list.style.iconcolor}};font-size:{{list.style.iconfont}}px;padding:{{list.style.paddingtop}}px 0;width:{{list.style.iconfont}}px;height:{{list.style.iconfont}}px;line-height:{{list.style.iconfont}}px;display:block;margin:0 auto"></cover-view>
+    <cover-image src="{{item.change ? item.imgurl2 : item.imgurl}}"></cover-image>
+    <!-- <cover-view class="iconfont {{item.iconclass}}" style="color:{{item.change? list.style.iconcoloron : list.style.iconcolor}};font-size:{{list.style.iconfont}}px;padding:{{list.style.paddingtop}}px 0;width:{{list.style.iconfont}}px;height:{{list.style.iconfont}}px;line-height:{{list.style.iconfont}}px;display:block;margin:0 auto"></cover-view> -->
     <cover-view style="font-size:{{list.style.textfont}}px;padding:{{list.style.paddingleft}}px 0;color:{{item.change? list.style.textcoloron : list.style.textcolor}};">
         {{item.text}}
     </cover-view>
