--- a/pages/goods_detail/goods_detail.wxss
+++ b/pages/goods_detail/goods_detail.wxss
@@ -88,10 +88,13 @@
     color:#669900;
     border:solid 1px #669900;
     border-radius:6rpx;
-    font-size:20rpx;
+    font-size:24rpx;
     text-align:center;
     margin-right: 10rpx;
+    margin-bottom: 8rpx;
     display: inline-block;
+    vertical-align: middle;
+    padding: 5rpx;
   }
   
 	.other_info {
@@ -619,7 +622,9 @@ overflow:hidden;
 }
 .image_bq {
   display: inline-block;
-  width: 50rpx;
+  width: 60rpx;
   height: 30rpx;
   margin-right: 10rpx;
+  margin-bottom: 10rpx;
+  vertical-align: middle;
 }
