--- a/pages/seach/seach.wxss
+++ b/pages/seach/seach.wxss
@@ -53,3 +53,25 @@
 
 
 }
+/*搜索历史列表外部容器样式*/
+.ddclass { 
+    position: absolute; 
+    width: 100%; 
+    margin-top: 10px; 
+    left: 0; 
+    
+   } 
+    
+    
+   /*搜索历史普通样式*/
+    
+    .liclass { 
+    font-size: 14px; 
+    line-height: 34px; 
+    color: #575757; 
+    height: 34px; 
+    display: block; 
+    padding-left: 18px; 
+    background-color: #fff; 
+    border-bottom: 1px solid #dbdbdb; 
+   } 
