--- a/pages/select_save_address/select_save_address.wxml
+++ b/pages/select_save_address/select_save_address.wxml
@@ -1,7 +1,7 @@
 <!-- pages/select_address/select_address.wxml -->
 <view class='all'>
   <radio-group class="radio-group" bindchange="radioChange">
-    <view class='content_list' bindtap="select" wx:for="{{warehouse}}" data-id="{{item.id}}">
+    <view class='content_list' bindtap="select" wx:for="{{warehouse}}" wx:key="index" data-id="{{item.id}}">
       <view class='radio'>
         <radio value="{{item.id}}" color='#02A0E6' checked="{{item.status == 1 ? 'true':''}}" />
       </view>
@@ -14,7 +14,7 @@
             <view class="savetitle">仓储标准：</view>
             <view class='scroll_view_border'>
               <swiper class="swiper_container" vertical="true" autoplay="true" circular="true" interval="5000">
-                <block wx:for="{{item.units}}">
+                <block wx:for="{{item.units}}" wx:key="index">
                   <swiper-item>
                     <view class="swiper_item">¥{{item.cost}}/{{item.unit}}/天</view>
                   </swiper-item>
