--- a/storage/pages/zcDetail/zcDetail.wxss
+++ b/storage/pages/zcDetail/zcDetail.wxss
@@ -1,5 +1,5 @@
 page{font-size: 28rpx; color: #6b6b6b;}
-view{overflow: initial;}
+view{overflow: initial !important;}
 .borb12{border-bottom: 12rpx solid rgb(242, 242, 242);}
 .metatit{font-size: 30rpx; color: #333; font-weight: 700;}
 .swiper-hd{height: 640rpx;}
