--- a/pages/settlement/settlement.wxml
+++ b/pages/settlement/settlement.wxml
@@ -81,7 +81,14 @@
       </view>
       <view class='order-info-box'>
         <view class='order-info-title'>{{item.goods_info.goods_name}}</view>
-        <view class='order-goods-p'>{{item.goods_info.goods_selling}}</view>
+        <view class='order-goods-p'>
+          <image class="image_bq" style="vertical-align: middle;" src="http://ptcb077mt.bkt.clouddn.com/kecun.png" wx:if="{{kc == 1}}"></image>
+          <image class="image_bq" src="http://ptcb077mt.bkt.clouddn.com/hot.png" wx:if="{{hot == 1}}"></image>
+          <image class="image_bq" src="http://ptcb077mt.bkt.clouddn.com/chuxiao.png" wx:if="{{cx == 1}}"></image>
+          <image class="image_bq" src="http://ptcb077mt.bkt.clouddn.com/qingchang.png" wx:if="{{qc == 1}}"></image>
+          <view class="texts" wx:for="{{item.goods_info.goods_sign}}" wx:key="{{index}}">{{item.text}}</view>
+          {{item.goods_info.goods_selling}}
+        </view>
         <view class='unit-price-quantity'>
           <view class='unit-price'>
             <view class='unit-price-img'>
@@ -117,7 +124,7 @@
           <text class='text_radio'>选择直邮</text>
         </label>
         <label class="radio" wx:else="{{delivery_b != 1 && delivery_b == 1}}">
-          <radio value="到店自提" color='#02A0E6' checked='checked'/>
+          <radio value="到店自提" color='#02A0E6' checked='checked' />
           <text class='text_radio'>到店自提</text>
         </label>
         <label class="radio" wx:if="{{delivery_b == 1 && delivery_a == 1}}">
@@ -193,7 +200,8 @@
     <view class='is_invoice'>
       <checkbox-group bindchange="checkboxChanges">
         <label class="checkbox">
-          <checkbox value="选择仓储年限" checked="{{is_checked==true?'true':''}}" />选择仓储年限
+          <checkbox value="选择仓储年限" checked="{{is_checked==true?'true':''}}" />
+          选择仓储年限
         </label>
       </checkbox-group>
       <!-- <image class="tips_img" src="img/u927.png" mode="widthFix"></image>
@@ -218,7 +226,8 @@
     <view class='is_invoice1'>
       <view class="is_invoice11">
         <label class="checkbox">
-          <checkbox value="选择仓储保险" /> 选择仓储保险
+          <checkbox value="选择仓储保险" />
+          选择仓储保险
         </label>
         <image class="tips_img" src="http://ptcb077mt.bkt.clouddn.com/u927.png" mode="widthFix"></image>
         <view class="" class="tips_content">*可选项，默认1年</view>
@@ -244,18 +253,21 @@
     <view class='is_invoice'>
       <label class="checkbox">
         <checkbox-group bindchange="check_invoice">
-          <checkbox value="0" checked="{{taxes_select==1?'true':''}}" /> 选择开具发票
+          <checkbox value="0" checked="{{taxes_select==1?'true':''}}" />
+          选择开具发票
         </checkbox-group>
       </label>
       <view class='invoice_money text_red'>¥ {{taxes}}</view>
     </view>
     <view class='go_invoice_information' bindtap="go_invoice_add">
       <view wx:if="{{company == undefined || company == ''}}">请添加发票信息</view>
-      <view wx:else><text class="" style="color:rgb(134, 134, 134)">纸质发票：</text>{{company}}</view>
+      <view wx:else>
+        <text class="" style="color:rgb(134, 134, 134)">纸质发票：</text>
+        {{company}}
+      </view>
       <view class='more_imgs'>
         <image src='http://ptcb077mt.bkt.clouddn.com/u1959.png' mode="scaleToFill"></image>
       </view>
-      
     </view>
   </view>
   <view class="{{selected2?'sundry':'sundry1'}}" style="{{fixiPhone? '' : 'margin-bottom: 100rpx'}}">
