--- a/pages/settlement/settlement.wxss
+++ b/pages/settlement/settlement.wxss
@@ -882,3 +882,22 @@ radio .wx-radio-input.wx-radio-input-checked::before {
   font-size: 25rpx;
   color: #6b6b6b;
 }
+.image_bq {
+  display: inline-block;
+  width: 60rpx;
+  height: 30rpx;
+  margin-right: 10rpx;
+  margin-bottom: 7rpx;
+  vertical-align: middle;
+}
+.texts {
+  color:#669900;
+  border:solid 1px #669900;
+  border-radius:6rpx;
+  font-size:24rpx;
+  text-align:center;
+  margin-right: 10rpx;
+  margin-bottom: 8rpx;
+  display: inline-block;
+  vertical-align: middle;
+}
