--- a/wxParse/wxParse.wxss
+++ b/wxParse/wxParse.wxss
@@ -18,7 +18,7 @@
     line-height: 1.8;
 }
 view{
-    word-break:break-all; overflow:auto;
+    word-break:break-all; overflow:visible;
 }
 .wxParse-inline{
     display: inline;
