--- a/pages/mine/mine.wxml
+++ b/pages/mine/mine.wxml
@@ -52,7 +52,7 @@
       <view class="order_title_more" bindtap="go_order" data-id="0">查看全部订单></view>
     </view>
     <view class='order_content'>
-      <view wx:for="{{order_nav}}" class='nav_list' bindtap="go_order" data-id="{{item.id}}">
+      <view wx:for="{{order_nav}}" wx:key="{{index}}" class='nav_list' bindtap="go_order" data-id="{{item.id}}">
         <view class='nav_img'>
           <image src='{{item.src}}'></image>
         </view>
@@ -61,7 +61,7 @@
     </view>
   </view>
   <view class='list-content'>
-    <view wx:for='{{list}}' class='ifor_list' data-url="{{item.src}}" bindtap="mycollect">
+    <view wx:for='{{list}}' wx:key="{{index}}" class='ifor_list' data-url="{{item.src}}" bindtap="mycollect">
       <view class='left'>
         <view class='list-ico'>
           <image src='{{item.url}}'></image>
@@ -78,7 +78,7 @@
     </view>
   </view>
   <view class='list-content' style="margin-bottom:100rpx;">
-    <view wx:for='{{lista}}' class='ifor_list' data-url="{{item.src}}" bindtap="mycollect">
+    <view wx:for='{{lista}}' wx:key="{{index}}" class='ifor_list' data-url="{{item.src}}" bindtap="mycollect">
       <view class='left'>
         <view class='list-ico'>
           <image src='{{item.url}}'></image>
