--- a/pages/goods_detail/goods_detail.wxml
+++ b/pages/goods_detail/goods_detail.wxml
@@ -45,7 +45,11 @@
     </view>
   </view>
   <view class='home_banner'>
-    <swiper indicator-dots="{{indicatorDots}}" autoplay="{{autoplay}}" interval="{{interval}}" duration="{{duration}}" indicator-dots="{{indicatorDots}}" autoplay="{{autoplay}}" circular="{{circular}}" duration="1000">
+  <!-- interval="{{interval}}" -->
+    <swiper  duration="{{duration}}" indicator-dots="{{indicatorDots}}"  circular="{{circular}}" >
+      <swiper-item wx:if="{{goods.video_link != ''}}">
+        <video id="myVideo" src="{{goods.video_link}}" style="width:100%;height:100%;" controls></video>
+      </swiper-item>
       <block wx:for="{{image}}" wx:key="{{index}}">
         <swiper-item class='swiper-item'>
           <image src="{{url}}{{item}}" class="slide-image" />
