--- a/pages/seach/seach.wxml
+++ b/pages/seach/seach.wxml
@@ -1,5 +1,5 @@
 <!--pages/seach/seach.wxml-->
-<view class="all">
+<!-- <view class="all">
     <view class="seach_title">
         <image class="seach_img" src="http://ptcb077mt.bkt.clouddn.com/seach.png" mode="widthFix" lazy-load="false" binderror="" bindload=""></image>
         <input type="text" placeholder="搜索商品" class="seach_input"  value=""/>
@@ -23,5 +23,15 @@
             <view class="list"> 龙井</view>
         </view>
     </view>
-</view>
+</view> -->
 
+<view class="menu">
+    <input class='search' placeholder='输入商品名称' placeholder-class='pla' bindinput='input_txt' bindconfirm='btn_search' value='{{searchValue}}'></input>
+    <button class='btn' bindtap='btn_search'>搜索</button>
+  </view>
+  <view class='history' bindtap='deleteHistory' wx:if="{{showHistory}}">清除搜索历史</view>
+  <view class='h_con' wx:if="{{showHistory}}">
+    <view class='h_con1'>
+      <view class="title" wx:for="{{history}}" bindtap='toSearch' data-value='{{item}}' data-index="{{index}}">{{item}}</view>
+    </view>
+  </view>
