--- a/custom-tab-bar/index.wxml
+++ b/custom-tab-bar/index.wxml
@@ -2,14 +2,14 @@
 <cover-view class="tab-bar">
   <cover-view class="tab-bar-border"></cover-view>
   <!-- <cover-view wx:for="{{list.data}}" wx:key="index" class="tab-bar-item" data-path="{{item.linkurl}}" data-index="{{index}}" bindtap="switchTab">
-    <cover-image src="{{index==0?(item.change ? 'http://ptoobf833.bkt.clouddn.com/home4.png' : 'http://ptoobf833.bkt.clouddn.com/home03.png'):(item.change ? item.imgurl2 : item.imgurl)}}"></cover-image>
+    <cover-image src="{{item.change ? item.imgurl2 : item.imgurl}}"></cover-image>
     <cover-view style="font-size:{{list.style.textfont}}px;padding:{{list.style.paddingleft}}px 0;color:{{item.change? list.style.textcoloron : list.style.textcolor}};">
         {{item.text}}
     </cover-view>
   </cover-view> -->
   <cover-view wx:for="{{tabBarArr}}" wx:key="{{index}}" class="tab-bar-item" data-index="{{index}}" data-path="{{item.path}}" bindtap="switchTab">
-    <cover-image src="{{item.selected ? item.img2 : item.img}}"></cover-image>
-    <cover-view style="color: {{item.selected ? item.colorOn : item.color}}">
+    <cover-image src="{{index == checked ? item.img2 : item.img}}"></cover-image>
+    <cover-view style="color: {{index == checked ? item.colorOn : item.color}}">
       {{item.text}}
     </cover-view>
   </cover-view>
