--- a/pages/buy/buy.wxss
+++ b/pages/buy/buy.wxss
@@ -5,6 +5,10 @@
   display: flex;
   align-items: center;
   height: 180rpx;
+  margin-top: 20rpx;
+  padding: 10rpx;
+  background: #FAFAFA;
+  overflow: hidden;
 }
 .goodList{
   overflow: hidden;
@@ -30,12 +34,7 @@
   color: #949494;
 
 }
-.content_list{
-  margin-top: 20rpx;
-  padding: 10rpx;
-  background: #FAFAFA;
-  overflow: hidden;
-}
+
 .goods_info_wrap{
   min-height: 406rpx;
   background: #fff;
@@ -410,3 +409,22 @@ text-align: center;
 }
 
 
+.image_bq {
+  display: inline-block;
+  width: 60rpx;
+  height: 30rpx;
+  margin-right: 10rpx;
+  margin-bottom: 7rpx;
+  vertical-align: middle;
+}
+.texts {
+  color:#669900;
+  border:solid 1px #669900;
+  border-radius:6rpx;
+  font-size:24rpx;
+  text-align:center;
+  margin-right: 10rpx;
+  margin-bottom: 8rpx;
+  display: inline-block;
+  vertical-align: middle;
+} 
