--- a/pages/seach/seach.wxml
+++ b/pages/seach/seach.wxml
@@ -2,18 +2,44 @@
 <view class="all">
     <view class="seach_title">
         <image class="seach_img" src="http://ptcb077mt.bkt.clouddn.com/seach.png" mode="widthFix" lazy-load="false" binderror="" bindload=""></image>
-        <input type="text" placeholder="搜索商品" class="seach_input" bindinput='getSearchKey' bindblur='routeToSearchResPage' value="" />
+        <input type="text" placeholder="搜索商品" class="seach_input" bindinput='getSearchKey' bindblur='routeToSearchResPage' value="{{searchKey}}" />
         <view class="seach_btu" bindinput='getSearchKey'>搜索</view>
     </view>
-    <view class="seach_content">
+    <view class="seach_content {{noshow? 'noshow' : ''}}" >
         <view style="display:flex;">
             <view class="content_title">历史搜索</view>
             <view style="flex:1"></view>
             <view class="content_title"  bindtap='clearHistory'>清空</view>
         </view>
         <view class='content_content'>
-            <view class='list' wx:for='{{history}}' data-index='{{index}}' bindtap='routeToSearchResPage'>
+            <view class='list' wx:for='{{history}}' data-index='{{index}}' data-record='{{item}}' bindtap='routeToSearchResPage'>
                 {{item}}
+            </view>
+        </view>
+    </view>
+    <view  style="padding:0 10px;background: top left repeat #ffffff;background-size:20% 20%;margin-top:10px;box-sizing:border-box;" wx:for="{{goods}}" wx:key="index">
+        <view bindtap="redirectto" class="hbj" data-link="{{item.linkurl}}" data-linktype="{{item.linktype}}" style="padding:10px 0;background:#fff;border-bottom:1px solid #eee;position:relative;">
+            <image mode="{{style.pich==1?'widthFix':''}}" src="{{item.thumb}}" style="width:168rpx;height:168rpx;"></image>
+            <view style="margin-left:30rpx;flex:1">
+                <view style="overflow:hidden;">
+                    <view style="font-size:26rpx;color:#434343;max-width:380rpx;height:46rpx;line-height:46rpx;float:left;overflow:hidden">
+                        {{item.title}}
+                    </view>
+                </view>
+                <view style="font-size:24rpx;color:#838383;margin-top:10rpx;height:44rpx;overflow:hidden">
+                    {{item.goods_selling!=null?item.goods_selling:''}}
+                </view>
+                <view class="hbj">
+                    <view style="flex:1;"></view>
+                    <view style="font-size:36rpx;color:#FF4A47">
+                        <text style="font-size:24rpx;">￥</text>
+                        {{item.price}}
+                    </view>
+                    <view style="font-size:12px;color: #838383; padding-top:5px;margin-left: 5px;text-decoration: line-through;">
+                        <text>￥</text>
+                        {{item.market_price}}
+                    </view>
+                </view>
             </view>
         </view>
     </view>
