--- a/pages/goods_detail/goods_detail.wxml
+++ b/pages/goods_detail/goods_detail.wxml
@@ -46,9 +46,9 @@
   </view>
   <view class='home_banner'>
   <!-- interval="{{interval}}" -->
-    <swiper  duration="{{duration}}" indicator-dots="{{indicatorDots}}"  circular="{{circular}}" >
+    <swiper  duration="{{duration}}" indicator-dots="{{indicatorDots}}"  circular="{{circular}}"  autoplay="{{autoplay}}">
       <swiper-item wx:if="{{goods.video_link != ''}}">
-        <video id="myVideo" src="{{goods.video_link}}" style="width:100%;height:100%;" controls></video>
+        <video id="myVideo" src="{{goods.video_link}}" style="width:100%;height:100%;"  autoplay="true" bindended="overVideo"></video>
       </swiper-item>
       <block wx:for="{{image}}" wx:key="{{index}}">
         <swiper-item class='swiper-item'>
