--- a/invoice/pages/invoice_select/invoice_select.wxml
+++ b/invoice/pages/invoice_select/invoice_select.wxml
@@ -4,43 +4,41 @@
       <view class="nav_item {{item.tab==tab? 'on' : ''}}">{{item.name}}</view>
     </view>
   </view>
-  <swiper current="{{tab}}" class="swiper-box" duration="500" bindchange="tab_slide" bindchange="tab_slide"
-    style="height:{{winHeight}}px">
+  <swiper current="{{tab}}" class="swiper-box" duration="500" bindchange="tab_slide" bindchange="tab_slide" style="height:{{winHeight}}px">
     <swiper-item>
-        <radio-group class="radio-group">
-          <scroll-view scroll-y="{{true}}" bindscroll="scroll" wx:for="{{enterprise}}" wx:key="{{index}}" bindtap="go_back" data-id="{{item.id}}">
-            <label class="radio">
-              <view class='left'>
-                <radio value="" checked="{{item.checked}}" color='#02A0E6' />
-              </view>
-              <view class='right'>
-                <view bindtap="go_back" data-id="{{item.id}}">
-                    <view class='list'>
-                        <view class='label'>发票抬头：</view>
-                        <view class='content'>{{item.company}}</view>
-                      </view>
-                      <view class='list'>
-                        <view class='label'>发票税号：</view>
-                        <view class='content'>{{item.company_number}}</view>
-                      </view>
-                      <view class='list last-child'>
-                        <view class='label'>发票种类：</view>
-                        <view class='content' wx:if="{{item.status==1}}">普通发票</view>
-                        <view class='content' wx:else>增值税专用发票</view>
-                      </view>
+      <radio-group class="radio-group">
+        <scroll-view scroll-y="{{true}}" bindscroll="scroll" wx:for="{{enterprise}}" wx:key="{{index}}">
+          <label class="radio">
+            <view class='left'>
+              <radio value="" checked="{{item.checked}}" color='#02A0E6' />
+            </view>
+            <view class='right'>
+              <view bindtap="go_back" data-id="{{item.id}}">
+                <view class='list'>
+                  <view class='label'>发票抬头：</view>
+                  <view class='content'>{{item.company}}</view>
                 </view>
-                <image src='img/u1458.png' mode='widthFix' class='delect' bindtap="delect" data-id="{{item.id}}">
-                </image>
-                <view class='reonly'>
-                <checkbox-group bindchange="checkboxChange">
-                  <checkbox value="{{item.id}}" checked="{{item.label==1?'true':''}}" />设为默认
-                  </checkbox-group>
-                  </view>
+                <view class='list'>
+                  <view class='label'>发票税号：</view>
+                  <view class='content'>{{item.company_number}}</view>
+                </view>
+                <view class='list last-child'>
+                  <view class='label'>发票种类：</view>
+                  <view class='content' wx:if="{{item.status==1}}">普通发票</view>
+                  <view class='content' wx:else>增值税专用发票</view>
+                </view>
               </view>
-            </label>
-          </scroll-view>
-        </radio-group>
-      
+              <image src='img/u1458.png' mode='widthFix' class='delect' bindtap="delect" data-id="{{item.id}}"></image>
+              <view class='reonly'>
+                <checkbox-group bindchange="checkboxChange">
+                  <checkbox value="{{item.id}}" checked="{{item.label==1?'true':''}}" />
+                  设为默认
+                </checkbox-group>
+              </view>
+            </view>
+          </label>
+        </scroll-view>
+      </radio-group>
     </swiper-item>
     <swiper-item>
       <radio-group class="radio-group">
@@ -64,18 +62,15 @@
               </view>
               <image src='img/u1458.png' mode='widthFix' class='delect' bindtap="delect" data-id="{{item.id}}"></image>
               <view class='reonly'>
-              <checkbox-group bindchange="checkboxChange1">
-                <checkbox value="{{item.id}}" checked="{{item.label==1?'true':''}}" class="" />设为默认
+                <checkbox-group bindchange="checkboxChange1">
+                  <checkbox value="{{item.id}}" checked="{{item.label==1?'true':''}}" class="" />
+                  设为默认
                 </checkbox-group>
-                </view>
+              </view>
             </view>
           </label>
         </scroll-view>
-
       </radio-group>
-     
     </swiper-item>
-
   </swiper>
-
 </view>
